# httper

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go  makefile  readme.md  todos.md
certs/: localhost+1.pem
echo/: .gitignore  Dockerfile  go.mod  go.sum  main.go  makefile
echo/certs/: localhost+1-key.pem
echo/internal/handler/: handler.go
go/: go.mod  main.go
pkg/env/: env.go  env_test.go
pkg/finalize/: response.go  response_test.go  save.go
pkg/finish/: response.go  response_test.go
pkg/request/: form.go  form_test.go  request.go  request_test.go
scripts/: integration-test.sh
src/: error.rs  form.rs  main.rs  model.rs  parse.rs
testdata/: basic-auth.http  bearer.http  echo.http  formdata.http  get.http  http-client.env.json  http2.http  image.http  json-image.http  json.http  live.http  multiline.http  request_live.http  three.http
