[package]
name = "httper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
clap = "4.5.4"
mime = "0.3.17"
mime_guess = "2.0.4"
reqwest = { version = "0.12.4", features = ["http2", "rustls-tls", "blocking"] }
thiserror = "1.0.60"
url = "2.5.0"
#tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
